# newspaper

./: .gitignore  CLAUDE.md  README.md  print-comics.sh  pyproject.toml  test-single-column.html
src/newspaper/: __init__.py  cli.py  comics.py  extras.py  html.py  pdf.py  pdf_weasy.py
tests/: test_cli.py
